Fix Site Header cutting off content on pages with no media

--- a/src/components/layout/PageHeader/PageHeader.module.css
+++ b/src/components/layout/PageHeader/PageHeader.module.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.wrapper__isSpaced {
+  padding-top: var(--size-siteHeaderHeight);
+}
+
 .media {
   position: relative;
   width: 100%;
